--- a/pre-assessment/index.html
+++ b/pre-assessment/index.html
@@ -1,25 +1,25 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
 <!--ensures the correct text display, making accessible for non-english speaking users-->
-<meta name="author" content="Amanda Myers">
+<meta name="author" content="Amanda Myers"/>
 <!--adhears your name to your own work-->
 <meta name="description" content="This is a skills pre-assessment for Mobile Web Development" />
-<!--gives the search engine information to find accurate responses to search-->
+<!--gives the search engine information to find accurate responses to search request-->
 <title>IFSC 3342 Pre-Assessment Amanda Myers</title>
-<link href="assets/css/screen.css" rel="stylesheet">
+<link href="assets/css/screen.css" rel="stylesheet"/>
 
 
 </head>
 <body>
 <div id="container">
   <div id="header">
-    <h1><a href="index.html">IFSC 3342 Pre-Assessment</a></h1>
+    <h1><a href="index.html">Amanda Myers</a></h1>
   </div>
   <div id="nav">
     <ul>
-      <li><a href="http://ualr.edu">UALR</a></li>
+      <li><a href="http://ualr.edu" title:"UA Little Rock>UALR</li>
       <li><a href="https://thomaswallace.net/course/mobile-web/spring-2018/">Course Homepage</a></li>
       <li><a href="http://www.w3.org/">W3C</a></li>
     </ul>
@@ -39,7 +39,7 @@
     <p>Answer goes here... </p>
   </div>
   <div id="footer">
-    <h6>Footer</h6>
+    <h6>&copy; 2025 | Amanda Myers | <href="#top"</h6>
   </div>
 </div>
 </body>
