--- a/pre-assessment/index.html
+++ b/pre-assessment/index.html
@@ -19,7 +19,7 @@
   </div>
   <div id="nav">
     <ul>
-      <li><a href="http://ualr.edu" title:"UA Little Rock>UALR</li>
+      <li><a href="http://ualr.edu" title="University of Arkansas at Little Rock">UALR</li>
       <li><a href="https://thomaswallace.net/course/mobile-web/spring-2018/">Course Homepage</a></li>
       <li><a href="http://www.w3.org/">W3C</a></li>
     </ul>
