--- a/pre-assessment/index.html
+++ b/pre-assessment/index.html
@@ -32,13 +32,22 @@
     <p>This complexity can be made to appear clear by effective organization and presentation and need not be reduced to meaningless "bite-sized" chunks of data, as simplification usually does. </p>
   </div>
     <p>Clarity refers to the focus on one particular message or goal at a time, rather than attempting to accomplish too much at once. Simplicity is often responsible for the "dumbing" of information rather than the illumination of it.</p>
-    <h3>Questions</h3>
+    <h3><em>Questions</em></h3>
     <p>Please answer the following questions below. Remember to markup the information properly using HTML</p>
-    <h4>Explain the difference between the &quot;alt&quot; attribute and the &quot;title&quot; attribute. </h4>
-    <p>Answer goes here...</p>
-    <h4>Please provide an example below of how to mark up a definition from the dictionary</h4>
-    <p>Answer goes here...</p>
-    <h4>Provide an example of link pointing to your favorite site &amp; create a style rule to change the background color of the link when the user hovers over it. </h4>
+    <h4><em>Explain the difference between the &quot;alt&quot; attribute and the &quot;title&quot; attribute.</em></h4>
+    <p>The "alt" attribute - alternative text - is used in the img tag to provide a text description of an image. It improves accessibility for visually impaired users and can display as a fall back if the image fails to load.</p>
+    <p>The "title" attribute provides additional information about an element when a user hovers above it. It is typically used for links, buttons, or other interactive elements.</p>
+    <h4><em>Please provide an example below of how to mark up a definition from the dictionary</em></h4>
+      <dl>
+        <dt>Preturnatural</dt>
+          <dd>Beyond what is normal or natural.
+            
+          </dd>
+        <dt>Supernatural</dt>
+
+      </dl>
+    </p>
+    <h4><em>Provide an example of link pointing to your favorite site &amp; create a style rule to change the background color of the link when the user hovers over it. </em></h4>
     <p>Answer goes here... </p>
   </div>
   <div id="footer">
