--- a/pre-assessment/index.html
+++ b/pre-assessment/index.html
@@ -38,20 +38,18 @@
     <p>The "alt" attribute - alternative text - is used in the img tag to provide a text description of an image. It improves accessibility for visually impaired users and can display as a fall back if the image fails to load.</p>
     <p>The "title" attribute provides additional information about an element when a user hovers above it. It is typically used for links, buttons, or other interactive elements.</p>
     <h4><em>Please provide an example below of how to mark up a definition from the dictionary</em></h4>
-      <dl>
+    <p><dl>
         <dt>Preturnatural</dt>
-          <dd>Beyond what is normal or natural.
-            
-          </dd>
+          <dd>Beyond what is normal and natural.</dd>
         <dt>Supernatural</dt>
-
+          <dd>Attributed to some force beyond scientific understanding or the laws of nature.</dd>
       </dl>
-    </p>
     <h4><em>Provide an example of link pointing to your favorite site &amp; create a style rule to change the background color of the link when the user hovers over it. </em></h4>
-    <p>Answer goes here... </p>
+    <p>
+      <a href="https://discord.com/" title="Discord">Discord</a></p>
   </div>
   <div id="footer">
-    <h6>&copy; 2025 | Amanda Myers | <a href="#top">Back to Top</a></h6>
+    <h6>&copy; 2025 | Amanda Myers | <a href="#top">Back to Top</a> | <a href="https://validator.w3.org/nu/#textarea">HTML Validation</a></h6>
   </div>
 </div>
 </body>
