--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
     <link rel="stylesheet" href="style.css">
     <title>Amanda Myers</title>
 </head>
-<body>
+<header>
     <h1>Amanda Myers</h1>
-
-    <ul>
-        <li><a href="pre-assessment/index.html">Pre-Assessment</a></li>
-        <li><a href="semantic-html/index.html">Semantic HTML</a></li>
-        <li><a href="css-grid-exercise/index.html">CSS Grid Exercise</a> </li>
-    </ul>
+    <nav>
+        <ul>
+            <li><a href="pre-assessment/index.html">Pre-Assessment</a></li>
+            <li><a href="semantic-html/index.html">Semantic HTML</a></li>
+            <li><a href="css-grid-exercise/index.html">CSS Grid Exercise</a></li>
+        </ul>
+    </nav>
+</header>
+<main>
     
-</body>
+</main>
 </html> 
