--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Amanda Myers</title>
 </head>
 <header>
     <h1>Amanda Myers</h1>
+</header>
+<main>
     <nav>
         <ul>
             <li><a href="pre-assessment/index.html">Pre-Assessment</a></li>
@@ -15,8 +17,6 @@
             <li><a href="css-grid-exercise/index.html">CSS Grid Exercise</a></li>
         </ul>
     </nav>
-</header>
-<main>
     
 </main>
 </html> 
