--- a/resume/index.html
+++ b/resume/index.html
@@ -64,9 +64,9 @@
       <h2>Skills</h2>
       <ul>
         <li class="skill">HTML</li>
-        <li class="skill">PHP</li>
-        <li class="skill">Java</li>
-        <li class="skill">Scss</li>
+        <li class="skill">CSS</li>
+        <li class="skill">JavaScript</li>
+        <li class="skill">Python</li>
       </ul>
       
     </section>
@@ -74,7 +74,7 @@
       <h2>Experience</h2>
       <!-- current job -->
       <article class="job">
-        <h3 itemprop="jobTitle">Cumputer Support Specialist</h3>
+        <h3 itemprop="jobTitle">Computer Support Specialist</h3>
         <div itemprop="worksFor" itemscope itemtype="http://schema.org/Organization">
           <span itemprop="name">University of Arkansas at Little Rock</span>
           <span>November 2024 - Present</span>
@@ -107,11 +107,6 @@
                 Apple iPads.</li>
                 <li>Interacted with clients over the phone and in person to troubleshoot our company
                 application.</li>
-                <li>Interacted with 10-15 clients daily while shampooing, shaving, cutting, and blow-drying
-                their hair.</li>    
-                <li>Sanitized tools, restocked inventory, and maintained an exceptionally clean salon</li>
-                <li>Skilled in a wide variety of hair cutting styles that include fades, shags, and bobs</li>
-                <li>Fostered a loyal 30 plus clientele by providing an exceptional customer experience.</li>
             </ul></p>
       </article>
      <article class="job" itemscope itemtype="http://schema.org/Organization">
@@ -129,17 +124,11 @@
         </div>
         <p itemprop="description"> 
             <ul>
-                <li><Installed new computers with state of the art software and taught less technically
-            experienced employees how to use new software.</li>
-            <li>Keep computers and software up to date and was lead computer information technician.
-            Stayed updated on the latest hair trends and techniques to provide cutting-edge
-            services to clients.</li>
-            <li>Collaborated with clients to understand their hairstyle preferences and provide
-            recommendations based on current trends and personal style.</li>
-            <li>Continuously improved hairstyling skills through training and professional development
-            opportunities.</li>
-            <li>Promoted and upsold salon products and treatments to clients to increase revenue and
-            enhance the overall client experience.</li>
+              <li>Installed new computers with state of the art software and taught less technically
+              experienced employees how to use new software.</li>
+              <li>Keep computers and software up to date and was lead computer information technician.</li>
+              <li>Promoted and upsold salon products and treatments to clients to increase revenue and
+              enhance the overall client experience.</li>
             </ul>
         </p>
       </article>
@@ -147,17 +136,17 @@
     <section id="education">
       <h2>Education</h2>
       <article class="certificate" itemprop="alumniOf" itemscope itemtype="http://schema.org/EducationalOrganization">
-        <h3 itemprop="description"><abbr title="Master of Science">BA</abbr> Web Design and Development</h3>
-        <span itemprop="name">University name 1</span>
-        <span itemprop="location" itemscope>Anywhere, USA</span>
-        <span>2005-2007</span>
+        <h3 itemprop="description"><abbr title="Junior Year">BA</abbr> Web Design and Development</h3>
+        <span itemprop="name">Universtiy of Arkansas at Little Rock</span>
+        <span itemprop="location" itemscope>Little Rock, Arkansas, USA</span>
+        <span>2024-current</span>
       </article>
     </section>
   </main>
   <!-- Footer -->
   <footer>
     <div id="copyright">
-      &copy; 2024 Name | <a href="#top">Top</a>
+      &copy; 2025 Amanda Myers | <a href="#top">Top</a>
     </div>
   </footer>
 </html>
