--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             <li><a href="pre-assessment/index.html">Pre-Assessment</a></li>
             <li><a href="semantic-html/index.html">Semantic HTML</a></li>
             <li><a href="css-grid-exercise/index.html">CSS Grid Exercise</a></li>
+            <li><a href="resume/index.html">Schema Resume</a></li>
+            <li><a href="resume-json/index.html">JSON-LD Resume</a></li>
         </ul>
     </nav>
     
