--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
             <li><a href="pre-assessment/index.html">Pre-Assessment</a></li>
             <li><a href="semantic-html/index.html">Semantic HTML</a></li>
             <li><a href="css-grid-exercise/index.html">CSS Grid Exercise</a></li>
-            <li><a href="resume/index.html">Schema Resume</a></li>
+            <li><a href="resume-schema/index.html">Schema Resume</a></li>
             <li><a href="resume-json/index.html">JSON-LD Resume</a></li>
+            <li><a href="mobile-resume/index.html">Mobile Resume</a></li>
         </ul>
     </nav>
     
