--- a/mobile-resume/index.html
+++ b/mobile-resume/index.html
@@ -96,7 +96,7 @@
 </header>
 <!-- Main -->
 <main class="container">
-  <h1 class="page-title">Amanda Myers/h1>
+  <h1 class="page-title">Amanda Myers</h1>
   <section id="about">
     <h2>Personal Details</h2>
     <div class="bio">
@@ -174,17 +174,17 @@
   <section id="education">
     <h2>Education</h2>
     <article class="certificate">
-      <h3><abbr title="Master of Science">BA</abbr> Web Design and Development</h3>
-      <span>University name 1</span>
-      <span>Anywhere, USA</span>
-      <span>2005-2007</span>
+      <h3><abbr title="Bachelor's of Arts">BA</abbr> Web Design and Development</h3>
+      <span>University of Arkansas at Little Rock </span>
+      <span>Little Rock, Arkansas, USA</span>
+      <span>2024-2027</span>
     </article>
   </section>
 </main>
 <!-- Footer -->
 <footer>
   <div id="copyright">
-    &copy; 2025 Name | <a href="#top">Top</a>
+    &copy; 2025 Amanda Myers | <a href="#top">Top</a>
   </div>
 </footer>
 
