--- a/mobile-resume/index.html
+++ b/mobile-resume/index.html
@@ -102,7 +102,7 @@
 <main class="container">
   <h1 class="page-title">Amanda Myers</h1>
   <section id="about">
-    <h2>Personal Details</h2>
+    <h2 class="visually-hidden">Personal Details</h2>
     <div class="bio">
     <img src="https://placehold.co/600x600?text=Headshot" alt="Your Name">
     <p>Short Bio Lorem ipsum dolor sit amet consectetur adipisicing elit...</p>
