--- a/index.html
+++ b/index.html
@@ -3,23 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Amanda Myers</title>
 </head>
-<header>
-    <h1>Amanda Myers</h1>
+  <body>
+    <header class="container">
+      <h1 class="title">Amanda Myers</h1>
 </header>
-<main>
-    <nav>
+    <nav class="primary-nav">
         <ul>
             <li><a href="pre-assessment/index.html">Pre-Assessment</a></li>
             <li><a href="semantic-html/index.html">Semantic HTML</a></li>
-            <li><a href="css-grid-exercise/index.html">CSS Grid Exercise</a></li>
+            <li><a href="css-grid-exercise/index.html">CSS Grid Exercise</a</li>
             <li><a href="resume-schema/index.html">Schema Resume</a></li>
             <li><a href="resume-json/index.html">JSON-LD Resume</a></li>
             <li><a href="mobile-resume/index.html">Mobile Resume</a></li>
         </ul>
     </nav>
     
-</main>
+</m>
 </html> 
