--- a/index.html
+++ b/index.html
@@ -13,16 +13,19 @@
     <header class="container">
       <h1 class="title">Amanda Myers</h1>
 </header>
-    <nav class="primary-nav">
+<main class="container">
+    <nav class="nav">
         <ul>
             <li><a href="pre-assessment/index.html">Pre-Assessment</a></li>
             <li><a href="semantic-html/index.html">Semantic HTML</a></li>
-            <li><a href="css-grid-exercise/index.html">CSS Grid Exercise</a</li>
+            <li><a href="assets/img/flexbox-defense.jpeg">Flexbox Defense</a></li>
+            <li><a href="assets/img/grid-garden.jpeg">Grid Garden</a</li>
             <li><a href="resume-schema/index.html">Schema Resume</a></li>
             <li><a href="resume-json/index.html">JSON-LD Resume</a></li>
-            <li><a href="mobile-resume/index.html">Mobile Resume</a></li>
+            <li><a href="responsive-resume/index.html">Responsive Resume</a></li>
         </ul>
     </nav>
+    </main>
     
 </m>
 </html> 
