--- a/responsive-resume/index.html
+++ b/responsive-resume/index.html
@@ -42,7 +42,7 @@
     "https://github.com/MandaMae429",
     "http://linkedin.com/profile"
   ],
-  "knowsAbout": ["HTML", "CSS", "JavaScript", "Python"],
+  "knowsAbout": ["HTML", "CSS", "JavaScript", "Python", "Responsive Design"],
   "worksFor": [
     {
       "@type": "Organization",
@@ -104,8 +104,8 @@
   <section id="about">
     <h2 class="visually-hidden">Personal Details</h2>
     <div class="bio">
-    <img src="https://placehold.co/600x600?text=Headshot" alt="Your Name">
-    <p>Short Bio Lorem ipsum dolor sit amet consectetur adipisicing elit...</p>
+    <img src="assets/img/Resume Headshot.png" alt="Amanda Myers">
+    <p>Currently pursuing a degree in Web Development and Design with hands-on experience through coursework, personal projects, and internships. Eager to contribute creativity, technical expertise, and a growth mindset to a dynamic development team.</p>
     </div>  
     <dl class="details">
       <dt>Name</dt>
@@ -134,7 +134,7 @@
     <ul class="related-links">
       <li><a href="https://github.com/MandaMae429"> github</a></li>
       <li><a href="http://linkedin.com/profile">linkedin</a></li>
-      <li><a href="resume.pdf" download>pdf resume</a></li>
+      <li><a href="Amanda-Myers-Web Developer-2.pdf" download>pdf resume</a></li>
     </ul>
   </section>
   <section id="skills">
@@ -142,8 +142,10 @@
     <ul>
       <li class="skill">HTML</li>
       <li class="skill">CSS</li>
-      <li class="skill">Java</li>
+      <li class="skill">JavaScript</li>
       <li class="skill">Python</li>
+      <li class="skill">Responsive Design</li>
+
     </ul>
   </section>
   <section id="experience">
@@ -153,10 +155,10 @@
       <div>
         <span>University of Arkansas at Little Rock</span>
         <span>November 2024 - Present</span>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit...</p>
+        <p>Efficiently manage technical support operations, troubleshoot complex IT issues, and maintain system documentation for university staff and students.</p> <p>Implement proactive solutions, enhance user experience with real-time assistance, and optimize IT service delivery through automated systems.</p> <p>Monitor system performance, conduct maintenance checks, and develop comprehensive technical documentation.</p> <p>Lead in-office projects, modernize support protocols, and improve ticket management for streamlined campus-wide support.</p>
         <span>
-          <a href="http://ualr.edu">Company URL</a>
-          <span>Little Rock, USA</span>
+          <a href="http://ualr.edu">UALR.edu</a>
+          <span>Little Rock, Arkansas</span>
         </span>
       </div>
     </article>
@@ -164,14 +166,27 @@
       <h3>Customer Service Tech II</h3>
       <span>
           <span>National Electronics Warranty</span>
-      <a href="http://link-to-company.com">new.com</a>
-      <span>Jacksonville, North Carolina, USA</span>
+      <a href="http://new.com">new.com</a>
+      <span>Jacksonville, North Carolina</span>
       </span>
       <div>
       <span>January 2010</span> - 
       <span>February 2012</span>
       </div>
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit...</p>
+      <p>Performed innovative troubleshooting techniques for complex technical issues,
+        streamlining resolution processes and improving first-call resolution rates.</p>
+        <p>Managed and resolved escalated customer service issues and complaints in a timely and
+        satisfactory manner, ensuring customer satisfaction and retention.</p>
+        <p>Provided technical support to customers to ensure effective and efficient
+        troubleshooting and resolution of their issues with DirecTV services.</p>
+        <p>Provided technical assistance and troubleshooting support to customers on installation,
+        usage, and maintenance of electronic devices and equipment.</p>
+        <p>Analyzed customer service data and trends to identify areas for improvement and
+        recommend strategies to enhance customer satisfaction and retention.</p>
+        <p>Provided comprehensive technical support, guiding customers through installation and
+        maintenance of electronic devices, enhancing user experience.</p>
+        <p>Collaborated with cross-functional teams to implement customer feedback, driving
+        continuous improvement in service quality and operational efficiency.</p>
     </article>
   </section>
   <section id="education">
@@ -179,8 +194,8 @@
     <article class="certificate">
       <h3><abbr title="Bachelor's of Arts">BA</abbr> Web Design and Development</h3>
       <span>University of Arkansas at Little Rock </span>
-      <span>Little Rock, Arkansas, USA</span>
-      <span>2024-2027</span>
+      <span>Little Rock, Arkansas</span>
+      <span>2024-Current</span>
     </article>
   </section>
 </main>
