--- a/responsive-resume/index.html
+++ b/responsive-resume/index.html
@@ -134,7 +134,7 @@
     <ul class="related-links">
       <li><a href="https://github.com/MandaMae429"> github</a></li>
       <li><a href="http://linkedin.com/profile">linkedin</a></li>
-      <li><a href="Amanda-Myers-Web Developer-2.pdf" download>pdf resume</a></li>
+      <li><a href="https://resume.co/@6CkfmjV0talLD7z1nZmD?password=XeqJulGybJyrHa" download>pdf resume</a></li>
     </ul>
   </section>
   <section id="skills">
