--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <li><a href="mobile-resume/index.html">Mobile Resume</a></li>
             <li><a href="https://www.figma.com/design/QLsmNagLG9DFSKidyyPweQ/Yellowstone-Prototype-Responsive?node-id=0-1&p=f&t=7FPAhpoGoJ3tVYYH-0">Figma Prototype</a></li>
             <li><a href="https://docs.google.com/document/d/1ry1IUBSz_vljMxgiLn-e4C9riErI0CCbh5WQQfI8qDw/edit?usp=sharing">Site Questionnaire</a></li>
+            <li><a href="responsive-images/index.html">Responsive Images</a></li>
         </ul>
     </nav>
     </main>
