final first commit

--- a/responsive-images/index.html
+++ b/responsive-images/index.html
@@ -8,4 +8,6 @@ srcset="assets/img/yellowstone_600px_watermarked_top_left.jpeg 400w,
 
         assets/img/yellowstone_20000px_watermarked_top_left.jpeg 2000w,
 
-        assets/img/yellowstone_3000px_watermarked_top_left.jpeg 3000w,">
+        assets/img/yellowstone_3000px_watermarked_top_left.jpeg 3000w"
+
+        sizes="(min-width:1000px) 30vw, 400px;">
