--- a/final-project/index.html
+++ b/final-project/index.html
@@ -12,10 +12,11 @@
 <header>
     <nav>
     <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#history">History</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="history.html">History</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="oldfaithful.html">Old Faithful</a></li>
     </ul>
     </nav>
     <h1>Yellowstone National Park</h1>
@@ -29,10 +30,25 @@
         <p>
             Yellowstone National Park is more than a destination — it’s a living, breathing wonderland of geysers, wildlife, and ancient landscapes. From the thundering majesty of Yellowstone Falls to the surreal colors of Grand Prismatic Spring, every corner of this iconic park tells a story millions of years in the making. Whether you’re a seasoned explorer or a first-time visitor, there’s always something new to discover.
         </p>
+        <img src="https://placehold.co/300x300" alt="Placeholder Image">
     </section>
     <section>
-        <h2>
+        <h2>Discover Yellowstone</h2>
+        <p>Yellowstone National Park, established in 1872, is not only America’s first national park but also one of the most awe-inspiring natural wonders in the world. Spanning over 2.2 million acres across Wyoming, Montana, and Idaho, Yellowstone is a land of dramatic contrasts — from towering mountains and sweeping valleys to bubbling geysers and crystal-clear lakes.</p>
+
+            <p> The heart of the park lies the Yellowstone Caldera, a massive supervolcano whose geothermal activity powers the park’s famous geysers and hot springs. Old Faithful, Grand Prismatic Spring, and Mammoth Hot Springs are just a few of the must-see features that draw millions of visitors each year. But beyond the iconic landmarks, Yellowstone offers quiet trails, hidden waterfalls, and vast meadows teeming with wildlife.</p>
             
-    
+            <p>Home to bison, elk, bears, wolves, and countless other species, Yellowstone is not just a destination — it’s a living ecosystem and a place of wonder, reflection, and unforgettable adventure.</p>
+    </section>
+    <section>
+       <img src="https://placehold.co/300x300" alt="Placeholder Image">
+    </section>
 </body>
+<footer>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d727448.0444979629!2d-111.17345963149441!3d44.584876497830614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5351e55555555555%3A0xaca8f930348fe1bb!2sYellowstone%20National%20Park!5e0!3m2!1sen!2sus!4v1746715322326!5m2!1sen!2sus" width="300" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <div id="copyright">
+        &copy; 2025 Amanda Myers | <a href="#top">Top</a>
+      </div>
+    </footer>
+</footer>
 </html>
