--- a/final-project/contact.html
+++ b/final-project/contact.html
@@ -23,7 +23,16 @@
     <p>Your adventure begins here!</p>
 </header>
 <body>
-    
+    <header>MINIMALISTIC FORM</header>
+
+<form id="form" class="topBefore">
+		
+		  <input id="name" type="text" placeholder="NAME">
+		  <input id="email" type="text" placeholder="E-MAIL">
+		  <textarea id="message" type="text" placeholder="MESSAGE"></textarea>
+  <input id="submit" type="submit" value="GO!">
+  
+</form>
     
 </body>
 <footer>
