third commit final

--- a/final-project/about.html
+++ b/final-project/about.html
@@ -7,16 +7,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400&family=Poiret+One&display=swap" rel="stylesheet">
-    <title>Yellowstone National Park</title>
+    <title>Yellowstone National Park Fan Page</title>
 </head>
-<header>
+<header class="container" id="primary">
     <nav>
     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="history.html">History</a></li>
-        <li><a href="contact.html">Contact</a></li>
         <li><a href="oldfaithful.html">Old Faithful</a></li>
+        <li><a href="https://www.nps.gov/yell/contacts.htm">Contact</a></li>
     </ul>
     </nav>
     <h1>Yellowstone National Park</h1>
@@ -24,7 +24,7 @@
 </header>
 <body>
     <h2>About Yellowstone National Park</h2>
-    <section>
+    <section class="container" id="main">
    <p>Yellowstone National Park is more than a natural landmark — it’s a symbol of America’s commitment to preserving the wild and wonderful. Established in 1872 as the first national park in the world, Yellowstone spans over 2.2 million acres across northwest Wyoming and extends into Montana and Idaho. With its vast wilderness, unique geothermal features, and abundant wildlife, the park stands as one of the most remarkable and diverse ecosystems on Earth.</p>
 
     <p>At the heart of Yellowstone lies the Yellowstone Caldera, a massive volcanic system that fuels the park’s world-famous geysers and hot springs. Iconic features like Old Faithful, Grand Prismatic Spring, and the Lower Falls of the Yellowstone River draw millions of visitors each year. But beyond the well-known sites are hundreds of miles of trails, pristine rivers, alpine lakes, and backcountry areas waiting to be explored.</p>
@@ -36,7 +36,7 @@
     <p>Whether you’re visiting to hike through vast pine forests, watch wildlife in Lamar Valley, or marvel at the geysers of the Upper Geyser Basin, Yellowstone offers a timeless connection to the raw power and beauty of nature.</p>
     <p>Yellowstone is not just a destination — it’s an experience. A place to reconnect, reflect, and remember what wild truly means.</p>
     </section>
-    <section>
+    <section class="container"id="park-info">
         <h2>Park Information</h2>
         <p>Location: Northwest Wyoming, USA</p>
         <p>Established: March 1, 1872</p>
