--- a/final-project/oldfaithful.html
+++ b/final-project/oldfaithful.html
@@ -7,16 +7,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400&family=Poiret+One&display=swap" rel="stylesheet">
-    <title>Yellowstone National Park</title>
+    <title>Yellowstone National Park Fan Page</title>
 </head>
-<header>
+<header class="container" id="primary">
     <nav>
     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="history.html">History</a></li>
-        <li><a href="contact.html">Contact</a></li>
         <li><a href="oldfaithful.html">Old Faithful</a></li>
+        <li><a href="https://www.nps.gov/yell/contacts.htm">Contact</a></li>
     </ul>
     </nav>
     <h1>Yellowstone National Park</h1>
@@ -24,7 +24,7 @@
 </header>
 <body>
     <h2>Old Faithful: The Icon of Yellowstone</h2>
-    <section>
+    <section class="container" id="main">
         <p>No feature in Yellowstone National Park is more famous — or more faithfully named — than Old Faithful, the world-renowned geyser whose towering eruptions have captivated visitors for generations. Nestled in the Upper Geyser Basin of Yellowstone, Old Faithful is not the largest geyser in the park, but it is certainly the most predictable — and beloved.</p>
         <h3>A Natural Marvel</h3>
         <p>Old Faithful erupts approximately every 90 minutes, sending a plume of boiling water and steam up to 180 feet into the air. Each eruption lasts between 1.5 to 5 minutes and releases thousands of gallons of superheated water. Beneath the surface, the geyser is powered by the Yellowstone Caldera, one of the largest active volcanic systems in the world. The underground heat and pressure build over time, forcing water upward through a narrow vent — a breathtaking example of geothermal power in action.</p>
