--- a/final-project/index.html
+++ b/final-project/index.html
@@ -7,32 +7,28 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400&family=Poiret+One&display=swap" rel="stylesheet">
-    <title>Yellowstone National Park</title>
+    <title>Yellowstone National Park Fan Page</title>
 </head>
-<header>
+<header class="container" id="primary">
     <nav>
     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="history.html">History</a></li>
-        <li><a href="contact.html">Contact</a></li>
         <li><a href="oldfaithful.html">Old Faithful</a></li>
+        <li><a href="https://www.nps.gov/yell/contacts.htm">Contact</a></li>
     </ul>
     </nav>
     <h1>Yellowstone National Park</h1>
     <p>Your adventure begins here!</p>
 </header>
 <body>
-    <section>
-        <h2>
-            Welcome to the Wild Heart of America
-        </h2>
-        <p>
-            Yellowstone National Park is more than a destination — it’s a living, breathing wonderland of geysers, wildlife, and ancient landscapes. From the thundering majesty of Yellowstone Falls to the surreal colors of Grand Prismatic Spring, every corner of this iconic park tells a story millions of years in the making. Whether you’re a seasoned explorer or a first-time visitor, there’s always something new to discover.
-        </p>
+    <section class="container" id="main">
+        <h2>Welcome to the Wild Heart of America</h2>
+        <p>Yellowstone National Park is more than a destination — it’s a living, breathing wonderland of geysers, wildlife, and ancient landscapes. From the thundering majesty of Yellowstone Falls to the surreal colors of Grand Prismatic Spring, every corner of this iconic park tells a story millions of years in the making. Whether you’re a seasoned explorer or a first-time visitor, there’s always something new to discover.</p>
         <img src="https://placehold.co/300x300" alt="Placeholder Image">
     </section>
-    <section>
+    <section class="container" id="main">
         <h2>Discover Yellowstone</h2>
         <p>Yellowstone National Park, established in 1872, is not only America’s first national park but also one of the most awe-inspiring natural wonders in the world. Spanning over 2.2 million acres across Wyoming, Montana, and Idaho, Yellowstone is a land of dramatic contrasts — from towering mountains and sweeping valleys to bubbling geysers and crystal-clear lakes.</p>
 
@@ -40,7 +36,7 @@
             
             <p>Home to bison, elk, bears, wolves, and countless other species, Yellowstone is not just a destination — it’s a living ecosystem and a place of wonder, reflection, and unforgettable adventure.</p>
     </section>
-    <section>
+    <section class="container" id="main">
        <img src="https://placehold.co/300x300" alt="Placeholder Image">
     </section>
 </body>
