--- a/final-project/about.html
+++ b/final-project/about.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400&family=Poiret+One&display=swap" rel="stylesheet">
     <title>Yellowstone National Park Fan Page</title>
 </head>
-<header class="container" id="primary">
+<header id="primary">
     <nav>
     <ul>
         <li><a href="index.html">Home</a></li>
