--- a/final-project/oldfaithful.html
+++ b/final-project/oldfaithful.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400&family=Poiret+One&display=swap" rel="stylesheet">
     <title>Yellowstone National Park Fan Page</title>
 </head>
-<header class="container" id="primary">
+<header id="primary">
     <nav>
     <ul>
         <li><a href="index.html">Home</a></li>
@@ -23,14 +23,20 @@
     <p>Your adventure begins here!</p>
 </header>
 <body>
-    <h2>Old Faithful: The Icon of Yellowstone</h2>
-    <section class="container" id="main">
+    <section class="container" id="oldfaithful">
+        <h2>Old Faithful: The Icon of Yellowstone</h2>
         <p>No feature in Yellowstone National Park is more famous — or more faithfully named — than Old Faithful, the world-renowned geyser whose towering eruptions have captivated visitors for generations. Nestled in the Upper Geyser Basin of Yellowstone, Old Faithful is not the largest geyser in the park, but it is certainly the most predictable — and beloved.</p>
+        </section>
+        <section class="container" id="oldfaithful">
         <h3>A Natural Marvel</h3>
         <p>Old Faithful erupts approximately every 90 minutes, sending a plume of boiling water and steam up to 180 feet into the air. Each eruption lasts between 1.5 to 5 minutes and releases thousands of gallons of superheated water. Beneath the surface, the geyser is powered by the Yellowstone Caldera, one of the largest active volcanic systems in the world. The underground heat and pressure build over time, forcing water upward through a narrow vent — a breathtaking example of geothermal power in action.</p>
+        </section>
+        <section class="container" id="oldfaithful">
         <h3>History of Old Faithful</h3>
         <p>Old Faithful was first documented during the Washburn-Langford-Doane Expedition of 1870, an early exploration of the Yellowstone region. The group named the geyser “Old Faithful” due to its remarkably regular eruption schedule — a consistency that made it stand out even in a land filled with otherworldly geothermal activity.</p>
         <p>When Yellowstone National Park was officially established in 1872, Old Faithful quickly became one of its most iconic attractions. Early visitors traveled by horse and stagecoach, often timing their schedules to witness its eruptions. Over time, walkways, lodges, and visitor centers were built nearby to accommodate growing interest, including the historic Old Faithful Inn, built in 1904 and still in use today.</p>
+        </section>
+        <section class="container" id="oldfaithful">
         <h3>A Symbol of the Park</h3>
         <p>Old Faithful remains a symbol not only of Yellowstone but of the entire U.S. National Park System. It represents the awe-inspiring power of nature, the importance of conservation, and the timeless wonder that draws millions to America’s wild places every year.</p>
         <p>Whether it’s your first visit or your tenth, watching Old Faithful erupt is a magical, must-see moment — a reminder that in Yellowstone, the Earth is very much alive.</p>
