--- a/final-project/index.html
+++ b/final-project/index.html
@@ -9,20 +9,23 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400&family=Poiret+One&display=swap" 
     rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
     <title>Yellowstone National Park Fan Page</title>
 </head>
 <header id="primary">
-    <nav>
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="history.html">History</a></li>
-        <li><a href="oldfaithful.html">Old Faithful</a></li>
-        <li><a href="https://www.nps.gov/yell/contacts.htm">Contact</a></li>
+    <nav class="rn" id="js-rn">
+    <ul class="rn-list">
+        <li><a href="index.html" class="rn-item">Home</a></li>   
+        <li><a href="about.html" class="rn-item">About</a></li>
+        <li><a href="history.html" class="rn-item">History</a></li>
+        <li><a href="oldfaithful.html" class="rn-item">Old Faithful</a></li>
+        <li><a href="https://www.nps.gov/yell/contacts.htm" class="rn-item">Contact</a></li>
+       
     </ul>
     </nav>
-    <h1>Yellowstone National Park</h1>
+    <h1 class="">Yellowstone National Park</h1>
     <p>Your adventure begins here!</p>
 </header>
 <body>
