--- a/final-project/history.html
+++ b/final-project/history.html
@@ -13,18 +13,17 @@
     <nav>
     <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
         <li><a href="history.html">History</a></li>
         <li><a href="oldfaithful.html">Old Faithful</a></li>
+        <li><a href="about.html">About</a></li>
         <li><a href="https://www.nps.gov/yell/contacts.htm">Contact</a></li>
     </ul>
     </nav>
     <h1>Yellowstone National Park</h1>
-    <p>Your adventure begins here!</p>
 </header>
 <body>
-    <h2>The History of Yellowstone National Park</h2>
     <section class="container" id="main">
+    <h2>The History of Yellowstone National Park</h2>
         <p>Yellowstone National Park holds a unique place in history as the first national park in the world, setting a global precedent for conservation. Officially established on March 1, 1872, by President Ulysses S. Grant, Yellowstone was protected “as a public park or pleasuring-ground for the benefit and enjoyment of the people.” Its creation marked the beginning of the national park movement — a revolutionary idea at the time — that natural wonders should be preserved for all, not exploited for profit.</p>
         <p>Long before Yellowstone became a national park, it was home to Indigenous peoples for thousands of years. Tribes such as the Shoshone, Crow, Blackfeet, and Nez Perce had deep connections to the land, relying on its resources and holding spiritual ties to its geysers, rivers, and wildlife. Their history in Yellowstone is long and complex, and modern recognition of Native American contributions and presence is a growing part of the park’s ongoing narrative.</p>
         <p>European Americans began exploring the Yellowstone region in the early 1800s, with fur trappers and mountain men recounting strange tales of “boiling rivers” and “fire-spewing earth.” Many dismissed their stories as exaggerations until organized expeditions in the late 1860s and early 1870s, such as the Washburn-Langford-Doane Expedition and the Hayden Geological Survey, brought back scientific data, detailed maps, and vivid illustrations. These helped persuade Congress to set aside the area as federally protected land.</p>
@@ -36,7 +35,7 @@
     
 </body>
 <footer>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d727448.0444979629!2d-111.17345963149441!3d44.584876497830614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5351e55555555555%3A0xaca8f930348fe1bb!2sYellowstone%20National%20Park!5e0!3m2!1sen!2sus!4v1746715322326!5m2!1sen!2sus" width="300" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <iframe class="map"  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d727448.0444979629!2d-111.17345963149441!3d44.584876497830614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5351e55555555555%3A0xaca8f930348fe1bb!2sYellowstone%20National%20Park!5e0!3m2!1sen!2sus!4v1746715322326!5m2!1sen!2sus" width="300" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     <div id="copyright">
         &copy; 2025 Amanda Myers | <a href="#top">Top</a>
       </div>
