--- a/final-project/index.html
+++ b/final-project/index.html
@@ -17,16 +17,15 @@
 <header id="primary">
     <nav class="rn" id="js-rn">
     <ul class="rn-list">
-        <li><a href="index.html" class="rn-item">Home</a></li>   
-        <li><a href="about.html" class="rn-item">About</a></li>
-        <li><a href="history.html" class="rn-item">History</a></li>
-        <li><a href="oldfaithful.html" class="rn-item">Old Faithful</a></li>
-        <li><a href="https://www.nps.gov/yell/contacts.htm" class="rn-item">Contact</a></li>
+        <li><a href="index.html">Home</a></li>   
+        <li><a href="history.html">History</a></li>
+        <li><a href="oldfaithful.html">Old Faithful</a></li>
+         <li><a href="about.html">About</a></li>
+        <li><a href="https://www.nps.gov/yell/contacts.htm">Contact</a></li>
        
     </ul>
     </nav>
-    <h1 class="">Yellowstone National Park</h1>
-    <p>Your adventure begins here!</p>
+    <h1>Yellowstone National Park</h1>
 </header>
 <body>
     <section class="container">
@@ -47,7 +46,7 @@
     
 </body>
 <footer>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d727448.0444979629!2d-111.17345963149441!3d44.584876497830614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5351e55555555555%3A0xaca8f930348fe1bb!2sYellowstone%20National%20Park!5e0!3m2!1sen!2sus!4v1746715322326!5m2!1sen!2sus" width="300" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d727448.0444979629!2d-111.17345963149441!3d44.584876497830614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5351e55555555555%3A0xaca8f930348fe1bb!2sYellowstone%20National%20Park!5e0!3m2!1sen!2sus!4v1746715322326!5m2!1sen!2sus" width="300" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     <div id="copyright">
         &copy; 2025 Amanda Myers | <a href="#top">Top</a>
       </div>
