--- a/final-project/about.html
+++ b/final-project/about.html
@@ -13,18 +13,17 @@
     <nav>
     <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
         <li><a href="history.html">History</a></li>
         <li><a href="oldfaithful.html">Old Faithful</a></li>
+        <li><a href="about.html">About</a></li>
         <li><a href="https://www.nps.gov/yell/contacts.htm">Contact</a></li>
     </ul>
     </nav>
     <h1>Yellowstone National Park</h1>
-    <p>Your adventure begins here!</p>
 </header>
 <body>
-    <h2>About Yellowstone National Park</h2>
     <section class="container" id="main">
+    <h2>About Yellowstone National Park</h2>
    <p>Yellowstone National Park is more than a natural landmark — it’s a symbol of America’s commitment to preserving the wild and wonderful. Established in 1872 as the first national park in the world, Yellowstone spans over 2.2 million acres across northwest Wyoming and extends into Montana and Idaho. With its vast wilderness, unique geothermal features, and abundant wildlife, the park stands as one of the most remarkable and diverse ecosystems on Earth.</p>
 
     <p>At the heart of Yellowstone lies the Yellowstone Caldera, a massive volcanic system that fuels the park’s world-famous geysers and hot springs. Iconic features like Old Faithful, Grand Prismatic Spring, and the Lower Falls of the Yellowstone River draw millions of visitors each year. But beyond the well-known sites are hundreds of miles of trails, pristine rivers, alpine lakes, and backcountry areas waiting to be explored.</p>
@@ -48,7 +47,7 @@
     
 </body>
 <footer>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d727448.0444979629!2d-111.17345963149441!3d44.584876497830614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5351e55555555555%3A0xaca8f930348fe1bb!2sYellowstone%20National%20Park!5e0!3m2!1sen!2sus!4v1746715322326!5m2!1sen!2sus" width="300" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d727448.0444979629!2d-111.17345963149441!3d44.584876497830614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5351e55555555555%3A0xaca8f930348fe1bb!2sYellowstone%20National%20Park!5e0!3m2!1sen!2sus!4v1746715322326!5m2!1sen!2sus" width="300" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     <div id="copyright">
         &copy; 2025 Amanda Myers | <a href="#top">Top</a>
       </div>
